Bug 1671054 - Decide AllowWebglOop after InitWebRenderConfig. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D94785